# lofigirl

./: .gitignore  EXPECTED_ARTIFACTS.md  PIPELINE_TESTING.md  README.md  commitlint.config.js  package-lock.json  package.json  test-build.sh
.github/: FEATURE-BRANCH-README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-system/: action.yml
.github/workflows/: auto-fix-commits.yml  build.yml  cd.yml  ci.yml  commit-validation.yml  conventional-commits.yml  release.yml  tag-release.yml  test-build.yml
docs/: GITHUB-RULESETS-SETUP.md  PIPELINE.md
scripts/: setup-pipeline.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sys_tray.rs
