[package]
name = "lofi-in-your-desktop"
version = "2.0.0"
description = "Listen to Lofi music on your desktop"
authors = ["Unai Mengual <git@owln.ai>"]
license = "MIT"
repository = "https://github.com/owlnai/lofi-in-your-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon"] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.43"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
