[package]
name = "lofi-girl"
version = "2.1.0"
description = "Listen to Lofi Girl radio on your desktop with minimalist design, audio-only mode, video player, and system tray integration"
authors = ["ZachTheDev", "Unai Mengual <git@owln.ai>", "Original contributors"]
license = "MIT"
repository = "https://github.com/zachthedev/lofigirl"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["tray-icon"] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.43"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
